2006-09-15  Jakub Jelinek  <jakub@redhat.com>

	[BZ #3138]
	* rt/tst-aiod.c (do_prepare): Give name_len type size_t.
	* rt/tst-aiod64.c (do_prepare): Likewise.

2006-09-07  Jakub Jelinek  <jakub@redhat.com>

	* tst-aiod2.c: Adjust test for new semantics of lio_listio.
	* tst-aiod3.c: The thread is now supposed to be created.

	* Makefile: Use $(..) in place of ../.
	(tests): Add tst-aio{8,9,10}, tst-cpuclock{1,2}, tst-cputimer{1,2,3}
	and tst-clock2.
	(CPPFLAGS-librtkaio): Append -I$(..)rt.
	* Versions.def (librtkaio): Add GLIBC_2.4 version.
	* sysdeps/unix/sysv/linux/kaio_misc.c (wait_for_kernel_requests)
	[!DONT_NEED_AIO_MISC_COND]: Don't use condvar, use AIO_MISC_WAIT.
	* sysdeps/unix/sysv/linux/kaio_misc.h [HAVE_FORCED_UNWIND]
	(DONT_NEED_AIO_MISC_COND, AIO_MISC_NOTIFY, AIO_MISC_WAIT): Define.
	(struct waitlist) [DONT_NEED_AIO_MISC_COND]: Remove cond.
	* sysdeps/unix/sysv/linux/kaio_suspend.c (struct clparam)
	[DONT_NEED_AIO_MISC_COND]: Remove cond.
	(cleanup) [DONT_NEED_AIO_MISC_COND]: Lock __aio_requests_mutex on
	entry.  Don't destroy param->cond.
	(aio_suspend): Fail if nent is negative.
	(aio_suspend) [DONT_NEED_AIO_MISC_COND]: Don't use cond, use
	AIO_MISC_WAIT.
	* sysdeps/unix/sysv/linux/klio_listio.c (lio_listio): Renamed to...
	(lio_listio_internal): ... this.  Don't use cond, but AIO_MISC_WAIT,
	if DONT_NEED_AIO_MISC_COND.  Remove mode parameter check.  Only set
	sigevent type to SIGEV_NONE if LIO_NO_INDIVIDUAL_EVENT is set.
	(__lio_listio_21): New function.  Compatiblity version which sets
	LIO_NO_INDIVIDUAL_EVENT before calling lio_listio_internal.
	(__lio_listio_item_notify): New function.
	* sysdeps/unix/sysv/linux/klio_listio64.c: Define __lio_listio_21 and
	__lio_listio_item_notify macros.
	* aio.h: Removed.
	* configure.in: New file
	* configure: Regenerated.
	* sysdeps/rtkaio/kaio_cancel.c: Moved to...
	* kaio_cancel.c: ... here.  New file.
	* sysdeps/rtkaio/kaio_error.c: Moved to...
	* kaio_error.c: ... here.  New file.